Fixed another issue causing multiple recolor attaches to be pinned to a parent.

--- a/data/objects/effects/attaches/effects_attache_batch.cfg
+++ b/data/objects/effects/attaches/effects_attache_batch.cfg
@@ -10,13 +10,13 @@
 
 	properties: {
 
-		do_setup: "commands :: [
+		do_setup: "commands :: if(not _constructed, [
 			initialize_position,
 			spawn_color_attache,
 			spawn_particle_sets,
 			spawn_legacy_particle_sets,
 			spawn_sprite_attaches,
-		]",
+		])",
 	
 		turn_off: "commands :: [
 			;map(subordinate_attaches, value.schedule_death_cleanup)
@@ -53,6 +53,7 @@
 				y: mid_y,
 				parent: _parent_obj,
 				time_to_die: 0,
+				effects_preset: (obj effects_attache_batch <- me).effects_preset,
 			})
 		",
 		
