--- a/data/objects/effects/attaches/effects_attache_recolor.cfg
+++ b/data/objects/effects/attaches/effects_attache_recolor.cfg
@@ -10,7 +10,8 @@
 	properties: {
 
 		do_setup: "commands :: [
-			initialize_position,
+			initialize_position
+			;
 			set_colors	
 		]",
 	
@@ -28,11 +29,17 @@
 												default_color_adjustment_hsl
 											)",
 
+		effects_preset: { type: "VisualEffectAttacheBatchType", dynamic_initialization: true },
+
+
 	#-------------------------- attachment to parent --------------------------#
-		set_colors:  "[
+		set_colors:  "if(not already_in_parent, [
 			set(root_parent_object.use_forced_hue, true),
 			add(root_parent_object.recolor_attaches, [(obj effects_attache_recolor <- me)]),
-		]",
+		])
+			where already_in_parent = (obj effects_attache_recolor <- me).effects_preset in map( root_parent_object.recolor_attaches, (obj effects_attache_recolor <- value).effects_preset)
+		
+		",
 
 		unset_colors:  "[
 			set(root_parent_object.use_forced_hue, false),
