--- a/data/objects/effects/attaches/status_effect_attache.cfg
+++ b/data/objects/effects/attaches/status_effect_attache.cfg
@@ -37,13 +37,13 @@
 			})",
 		
 #-------------------------- prototype overrides --------------------------#
-		do_setup: "commands ::	[
+		do_setup: "commands ::	if(not _constructed, [
 									initialize_position,
 									set(cycle_started_at, level.cycle),
 									add_object(visual_fx)
 									;
 									set(position_created_at, {x: hittable_parent.x, y: hittable_parent.y}),
-								]",
+								])",
 	},
 
 	
