Temporarily plugging an issue with control-locks leaking after death, by clearing the control lock when the player object is destroyed.

--- a/data/object_prototypes/base/player_controlled.cfg
+++ b/data/object_prototypes/base/player_controlled.cfg
@@ -55,6 +55,8 @@ properties: {
 
 
 	epihittable_obj_destructor: "commands ::	[
+													set(me.control_lock, null),  /* due to some engine shenanigans, this isn't cleared on player death, so we have to do it manually here. */ 
+
 													player_constructor_debug('player_destructor'),
 													player_controlled_obj_destructor,
 													general_player_obj_destructor,
