Cleaned up the available items in prospera's shop so that what she's selling is strictly limited to objects that we support as non-broken for this release.

--- a/data/items.cfg
+++ b/data/items.cfg
@@ -226,6 +226,8 @@
 		name: "~Aggravor's Ruby~",
 		id: "@eval enum item_super_fire_pendant",
 		description: "~A rare and flawless gem said to have an affinity with fire. Enhances fire attacks when combined with a reagent.~",
+		short_store_description: "[~If you've swallowed an enemy,\\nthis gives you a charged attack\\nthat detonates all enemies in sight.~]",
+		costs_trophies_instead_of_coins: true,
 		count_limit: 1,
 		item_category: "@eval enum super_ability",
 		anim_rect: [160,118,180,138],
@@ -236,6 +238,8 @@
 		name: "~Kinestra's Opal~",
 		id: "@eval enum item_super_energy_pendant",
 		description: "~A rare and flawless gem said to have an affinity with electricity. Enhances electric attacks when combined with a reagent.~",
+		short_store_description: "[~If you've swallowed an enemy,\\nthis gives you powerful projectile\\nthat passes through solid objects.~]",
+		costs_trophies_instead_of_coins: true,
 		count_limit: 1,
 		item_category: "@eval enum super_ability",
 		anim_rect: [160,166,180,186],
@@ -243,9 +247,11 @@
 		item_element_type: "@eval enum energy",
 	},
 	{
-		name: "~Antilight's Onyx~",
+		name: "~Maligula's Onyx~",
 		id: "@eval enum item_super_arcane_pendant",
 		description: "~A rare and flawless gem said to have an affinity with otherworldly energy. Enhances astral attacks when combined with a reagent.~",
+		short_store_description: "[~If you've swallowed an enemy,\\nthis creates a ring of orbs\\nthat protect you by dealing damage.~]",
+		costs_trophies_instead_of_coins: true,
 		count_limit: 1,
 		item_category: "@eval enum super_ability",
 		anim_rect: [160,94,180,114],
@@ -256,6 +262,8 @@
 		name: "~Sulfurion's Emerald~",
 		id: "@eval enum item_super_acid_pendant",
 		description: "~A rare and flawless gem said to have an affinity with toxic elements. Enhances acid attacks when combined with a reagent.~",
+		short_store_description: "[~If you've swallowed an enemy,\\nthis gives you a charged attack\\nthat poisons all enemies in a large ring.~]",
+		costs_trophies_instead_of_coins: true,
 		count_limit: 1,
 		item_category: "@eval enum super_ability",
 		anim_rect: [160,142,180,162],
@@ -266,6 +274,7 @@
 		name: "~Lanarica's Sapphire~",
 		id: "@eval enum item_super_ice_pendant",
 		description: "~A rare and flawless gem said to have an affinity with the bitter cold. Enhances ice attacks when combined with a reagent.~",
+		costs_trophies_instead_of_coins: true,
 		count_limit: 1,
 		item_category: "@eval enum super_ability",
 		anim_rect: [160,166,180,186],
