--- a/data/level/Forest/prosperas-workshop.cfg
+++ b/data/level/Forest/prosperas-workshop.cfg
@@ -773,7 +773,7 @@
 			"label": "_5839bb2b",
 			"property_data": {
 				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_skipback_sigil"
+				"settable_item_id": "@eval enum item_super_fire_pendant"
 			},
 			"type": "store_item",
 			"x": 1161,
@@ -812,7 +812,7 @@
 			"label": "_54f72a01",
 			"property_data": {
 				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_ice_corona_talisman"
+				"settable_item_id": "@eval enum item_super_energy_pendant"
 			},
 			"type": "store_item",
 			"x": 1676,
@@ -824,7 +824,7 @@
 			"custom": true,
 			"label": "_22c14046",
 			"property_data": {
-				"settable_item_id": "@eval enum item_ammo_creating"
+				"settable_item_id": "@eval enum item_super_arcane_pendant"
 			},
 			"type": "store_item",
 			"x": 1729,
@@ -837,24 +837,11 @@
 			"label": "_3ec05c39",
 			"property_data": {
 				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_bubble_shield"
+				"settable_item_id": "@eval enum item_super_acid_pendant"
 			},
 			"type": "store_item",
 			"x": 1812,
 			"y": 231
-		},
-		{
-			"_uuid": "4d6743a0e0f34c61873e705770c926c9",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_3030f9",
-			"property_data": {
-				"is_in_foreground": true,
-				"settable_item_id": "@eval enum item_wall_sticker_block"
-			},
-			"type": "store_item",
-			"x": 1870,
-			"y": 229
 		},
 		{
 			"_uuid": "e1ac6bc47f5144db8ac5c77e40adcd99",
