--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -2109,11 +2109,24 @@ on_process_run: "if(abs(velocity_x) > 300 and cycle%5=0 and (not underwater),
 
 
 
-on_idling: "if(idleness_level < 6, [
+on_idling: "if(idleness_level < 2, [
 	animation('stand'),
 	add(idleness_level, 1),
 ],[
-	if(1d4!=4, animation('idle_croak'), animation('idle_eyeball')),
+	animation(
+		switch(1d9,
+			1, 'idle_shrug',
+			2, 'idle_shrug',
+			3, 'idle_shrug',
+			4, 'idle_croak',
+			5, 'idle_croak',
+			6, 'idle_croak',
+			7, 'idle_croak',
+			8, 'idle_eyeball',
+			9, 'idle_eyeball',
+			   'idle_shrug'
+		)
+	),
 	set(idleness_level, 0),
 ])",
 
@@ -2173,6 +2186,7 @@ on_end_skid_anim: "start_standing",
 					
 on_end_idle_eyeball_anim: "start_standing",
 on_end_idle_croak_anim: "start_standing",
+on_end_idle_shrug_anim: "start_standing",
 on_whoosh_up: "lib.sound.play_sound(me, 'emote-whoosh-medium')", //used for standing up after awakening
 on_whoosh_down: "lib.sound.play_sound(me, 'emote-whoosh-light3')",
 on_feet_stand: "play_material_sound(enum jump)", //used when feet hit floor after standing up quickly.
@@ -2877,6 +2891,18 @@ animation: [
 		rect: [3,37,34,69],
 		frames: 25,
 		duration: 7,
+	},{
+		image: "characters/frogatto-spritesheet-idle.png",
+		accel_x: 0,
+		accel_y: 0,
+		pad: 3,
+		body_area: "all",
+		feet_width: 5,
+		id: "idle_shrug",
+		rect: [1,73,32,105],
+		frames: 9,
+		reverse: true,
+		duration: 10,
 	},{
 		image: "characters/frogatto-spritesheet1.png",
 		id: "floating_spin",
