Partial work towards making the dash attack for the moth boss less non-telegraphed.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -64,28 +64,33 @@ properties: {
 	generate_dive_path: "map(range(10), [value/10.0,sin(18*value)])",
 
 	#-------------------------- attack modes --------------------------#
-	enter_mode: "def(string mode, commands command) -> commands [set(_state, mode), command, /*debug(mode+' '+cycle)*/]",
-	change_action: "commands <- if(cycle - _last_changed_action > change_action_cooldown_time, [set(_last_changed_action, cycle),
-					if(_state = 'diving_towards_player', enter_mode('recover_from_dive', choose_dive_recovery_pos),
-						if(_state = 'moving_to_prep_windgust', enter_mode('windgust',do_wind_gust_level_behavior),
-							if(_state != 'moving', enter_mode('moving',choose_target_pos),
-								[
-									switch(_behavior_mode_prng.get_next_value, 
-										0,	enter_mode('shooting',prepare_shot),
-										1,	enter_mode('shooting_homingshot',prepare_homing_shot),
-										2,	enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
-										3,	enter_mode('diving_towards_player', choose_dive_target_pos ),
-										4,	if(should_lay_egg,
-												enter_mode('egg-laying',lay_egg),
-												enter_mode('shooting',prepare_shot)
-											),
+	enter_mode: "def(string mode, commands command) -> commands [set(_state, dump(mode)), command, /*debug(mode+' '+cycle)*/]",
+	change_action: "commands <- if(cycle - _last_changed_action > change_action_cooldown_time,
+		[
+			set(_last_changed_action, cycle),
+			if(_state = 'dive_attack_dropdown', enter_mode('dive_attack_dash', choose_dive_dash_end_pos),
+				if(_state = 'dive_attack_dash', enter_mode('recover_from_dive', choose_dive_recovery_pos),
+					if(_state = 'moving_to_prep_windgust', enter_mode('windgust',do_wind_gust_level_behavior),
+						if(_state != 'moving', enter_mode('moving',choose_target_pos),
+							[
+								switch( 3, //_behavior_mode_prng.get_next_value, 
+									0,	enter_mode('shooting',prepare_shot),
+									1,	enter_mode('shooting_homingshot',prepare_homing_shot),
+									2,	enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
+									3,	enter_mode('dive_attack_dropdown', choose_dive_dropdown_pos ),
+									4,	if(should_lay_egg,
+											enter_mode('egg-laying',lay_egg),
+											enter_mode('shooting',prepare_shot)
 										),
-									_behavior_mode_prng.iterate_random_pool
-								]
-							)
+									),
+								_behavior_mode_prng.iterate_random_pool
+							]
 						)
 					)
-					])",
+				)
+			)
+		]
+	)",
 
 	choose_first_target_pos: "[ set(_target_x, (flight_bounds.x2 - flight_bounds.x)/2), set(_target_y, flight_bounds.y2)]",
 
@@ -100,10 +105,14 @@ properties: {
 	
 	
 #---- general target-seeking ----#
-	movement_speed: "if(_state in ['diving_towards_player'], 125, 75)",
+	movement_speed: "switch(_state,
+		'dive_attack_dropdown', 125,
+		'dive_attack_dash', 200,
+		75
+	)",
 
 	seek_position: "[
-		if(_state = 'diving_towards_player',
+		if(_state = 'dive_attack_dropdown',
 			if(not animation in (['dive'] + uninterruptible_animations),
 				animation('dive')
 			)
@@ -135,9 +144,31 @@ properties: {
 
 									
 #---- dive attack ----#
-	choose_dive_target_pos: "[set(_target_x, level.player.mid_x), set(_target_y, level.player.mid_y)]",
-	choose_dive_recovery_pos: "[set(_target_x, if(velocity_x < 0, flight_bounds.x, flight_bounds.x2)), set(_target_y, flight_bounds.y + (flight_bounds.y2 - flight_bounds.y)/2)]",
-	
+	/*
+		In the dive attack, we drop straight downwards, and then rapidly zoom horizontally, and then recover back to a normal flight height.
+	*/
+
+	dive_end_margin: "int :: 200",
+
+	choose_dive_dropdown_pos: "[
+		set(_target_x, if(dash_direction = 1, flight_bounds.x2 - dive_end_margin, flight_bounds.x + dive_end_margin)),
+		set(_target_y, level.player.mid_y),
+	]",
+
+	choose_dive_dash_end_pos: "[
+		set(_target_x, if(dash_direction = 1, flight_bounds.x + dive_end_margin, flight_bounds.x2 - dive_end_margin)),
+		set(_target_y, me.mid_y),
+	]",
+
+	choose_dive_recovery_pos: "[
+		set(_target_x, if(dash_direction = 1, flight_bounds.x + dive_end_margin, flight_bounds.x2 - dive_end_margin)),
+		set(_target_y, flight_bounds.y + (flight_bounds.y2 - flight_bounds.y)/2),
+	]",
+
+	dash_direction: "int :: if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, 1, -1)",
+
+
+
 #---- wind gust ----#
 	choose_windgust_target_pos: "if(1d2=2,
 		[
@@ -407,7 +438,8 @@ on_process: "[
 			'egg-laying',					null,
 			'moving_to_prep_windgust',		seek_position,
 			'windgust',						do_wind_gust_processing_behavior,
-			'diving_towards_player',		seek_position,
+			'dive_attack_dropdown',			seek_position,
+			'dive_attack_dash',				seek_position,
 			'recover_from_dive',			seek_position,
 			null
 		)
