Added a particle contrail for the moth boss doing the dash attack.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -51,10 +51,11 @@ properties: {
 	
 	#-------------------------- general functions --------------------------#
 	setup: "[
-		
-			set_max_hitpoints({casual: standard_thrown_damage * 8, challenging: standard_thrown_damage * 16}),
-			setup_wind_gust_obj,
-		
+		set_max_hitpoints({casual: standard_thrown_damage * 8, challenging: standard_thrown_damage * 16}),
+		setup_wind_gust_obj,
+		add_object(dash_particles)
+		;
+		dash_particles.turn_off
 	]",	
 	
 	try_facing: "def(int direction) -> commands if(direction != facing,fire_event('turn'))",
@@ -156,16 +157,39 @@ properties: {
 	]",
 
 	choose_dive_dash_end_pos: "[
+		dash_particles.turn_on,
 		set(_target_x, if(dash_direction = 1, flight_bounds.x + dive_end_margin, flight_bounds.x2 - dive_end_margin)),
 		set(_target_y, me.mid_y),
 	]",
 
 	choose_dive_recovery_pos: "[
+		dash_particles.turn_off,
 		set(_target_x, if(dash_direction = 1, flight_bounds.x + dive_end_margin, flight_bounds.x2 - dive_end_margin)),
 		set(_target_y, flight_bounds.y + (flight_bounds.y2 - flight_bounds.y)/2),
 	]",
 
 	dash_direction: "int :: if(mid_x > scene_bounds.x + (scene_bounds.x2 - scene_bounds.x)/2, 1, -1)",
+
+	dash_particles: {
+		type: "obj legacy_particle_attache",
+		init: "object('legacy_particle_attache', mid_x, mid_y, {
+			_particle_type: 'moth_big_trail',
+			parent: me,
+			time_to_die: 150,
+
+			customized_spawn_rects: [{
+				particle_id: 'moth_big_trail',
+				rect: [ -20, 20, -100, 100 ],
+			}],
+
+			customized_spawn_rates: [{
+				particle_id: 'moth_big_trail',
+				magnitude: 5000,
+			}],
+
+		})",
+		persistent: false,
+	},
 
 
 
