Finished off most of the necessities for the moth boss charge attack's enhancement.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -69,23 +69,25 @@ properties: {
 	change_action: "commands <- if(cycle - _last_changed_action > change_action_cooldown_time,
 		[
 			set(_last_changed_action, cycle),
-			if(_state = 'dive_attack_dropdown', enter_mode('dive_attack_dash', choose_dive_dash_end_pos),
-				if(_state = 'dive_attack_dash', enter_mode('recover_from_dive', choose_dive_recovery_pos),
-					if(_state = 'moving_to_prep_windgust', enter_mode('windgust',do_wind_gust_level_behavior),
-						if(_state != 'moving', enter_mode('moving',choose_target_pos),
-							[
-								switch( 3, //_behavior_mode_prng.get_next_value, 
-									0,	enter_mode('shooting',prepare_shot),
-									1,	enter_mode('shooting_homingshot',prepare_homing_shot),
-									2,	enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
-									3,	enter_mode('dive_attack_dropdown', choose_dive_dropdown_pos ),
-									4,	if(should_lay_egg,
-											enter_mode('egg-laying',lay_egg),
-											enter_mode('shooting',prepare_shot)
+			if(_state = 'dive_attack_dropdown', enter_mode('dive_attack_charge', start_charge_dive_attack),
+				if(_state = 'dive_attack_charge', enter_mode('dive_attack_dash', choose_dive_dash_end_pos),
+					if(_state = 'dive_attack_dash', enter_mode('recover_from_dive', choose_dive_recovery_pos),
+						if(_state = 'moving_to_prep_windgust', enter_mode('windgust',do_wind_gust_level_behavior),
+							if(_state != 'moving', enter_mode('moving',choose_target_pos),
+								[
+									switch( 3, //_behavior_mode_prng.get_next_value, 
+										0,	enter_mode('shooting',prepare_shot),
+										1,	enter_mode('shooting_homingshot',prepare_homing_shot),
+										2,	enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
+										3,	enter_mode('dive_attack_dropdown', choose_dive_dropdown_pos ),
+										4,	if(should_lay_egg,
+												enter_mode('egg-laying',lay_egg),
+												enter_mode('shooting',prepare_shot)
+											),
 										),
-									),
-								_behavior_mode_prng.iterate_random_pool
-							]
+									_behavior_mode_prng.iterate_random_pool
+								]
+							)
 						)
 					)
 				)
@@ -156,6 +158,15 @@ properties: {
 		set(_target_y, level.player.mid_y),
 	]",
 
+	start_charge_dive_attack: "[
+		schedule(100, bind_command(def() change_action) ),
+	]",
+
+	do_charge_dive_processing_behavior: "[
+		if(not animation in (['flapfast'] + uninterruptible_animations), animation('flapfast')),
+		set(facing, -dash_direction),
+	]",
+
 	choose_dive_dash_end_pos: "[
 		dash_particles.turn_on,
 		set(_target_x, if(dash_direction = 1, flight_bounds.x + dive_end_margin, flight_bounds.x2 - dive_end_margin)),
@@ -205,6 +216,7 @@ properties: {
 	)",
 
 	do_wind_gust_processing_behavior: "[
+
 		if(not animation in (['flapfast'] + uninterruptible_animations), animation('flapfast')),
 		if(
 			//if we're within the core time slice, during the heavy breeze
@@ -458,13 +470,14 @@ on_end_anim: "animation('fly')",
 on_process: "[
 	if(animation = 'fly',
 		switch(_state,
-			'moving',						seek_position,
-			'egg-laying',					null,
-			'moving_to_prep_windgust',		seek_position,
-			'windgust',						do_wind_gust_processing_behavior,
-			'dive_attack_dropdown',			seek_position,
-			'dive_attack_dash',				seek_position,
-			'recover_from_dive',			seek_position,
+			'moving',								seek_position,
+			'egg-laying',							null,
+			'moving_to_prep_windgust',				seek_position,
+			'windgust',								do_wind_gust_processing_behavior,
+			'dive_attack_dropdown',					seek_position,
+			'dive_attack_dash',						seek_position,
+			'recover_from_dive',					seek_position,
+			'dive_attack_charge',					do_charge_dive_processing_behavior,
 			null
 		)
 	),
