--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -65,7 +65,7 @@ properties: {
 	generate_dive_path: "map(range(10), [value/10.0,sin(18*value)])",
 
 	#-------------------------- attack modes --------------------------#
-	enter_mode: "def(string mode, commands command) -> commands [set(_state, dump(mode)), command, /*debug(mode+' '+cycle)*/]",
+	enter_mode: "def(string mode, commands command) -> commands [set(_state, mode), command, /*debug(mode+' '+cycle)*/]",
 	change_action: "commands <- if(cycle - _last_changed_action > change_action_cooldown_time,
 		[
 			set(_last_changed_action, cycle),
@@ -75,7 +75,7 @@ properties: {
 						if(_state = 'moving_to_prep_windgust', enter_mode('windgust',do_wind_gust_level_behavior),
 							if(_state != 'moving', enter_mode('moving',choose_target_pos),
 								[
-									switch( 3, //_behavior_mode_prng.get_next_value, 
+									switch( _behavior_mode_prng.get_next_value, 
 										0,	enter_mode('shooting',prepare_shot),
 										1,	enter_mode('shooting_homingshot',prepare_homing_shot),
 										2,	enter_mode('moving_to_prep_windgust',choose_windgust_target_pos),
@@ -109,7 +109,7 @@ properties: {
 	
 #---- general target-seeking ----#
 	movement_speed: "switch(_state,
-		'dive_attack_dropdown', 125,
+		'dive_attack_dropdown', 100,
 		'dive_attack_dash', 200,
 		75
 	)",
@@ -151,10 +151,10 @@ properties: {
 		In the dive attack, we drop straight downwards, and then rapidly zoom horizontally, and then recover back to a normal flight height.
 	*/
 
-	dive_end_margin: "int :: 200",
+	dive_end_margin: "int :: if(dash_direction = 1, -300, 500)",
 
 	choose_dive_dropdown_pos: "[
-		set(_target_x, if(dash_direction = 1, flight_bounds.x2 - dive_end_margin, flight_bounds.x + dive_end_margin)),
+		set(_target_x, if(dash_direction = 1, flight_bounds.x2 + dive_end_margin, flight_bounds.x + dive_end_margin)),
 		set(_target_y, level.player.mid_y),
 	]",
 
@@ -169,13 +169,13 @@ properties: {
 
 	choose_dive_dash_end_pos: "[
 		dash_particles.turn_on,
-		set(_target_x, if(dash_direction = 1, flight_bounds.x + dive_end_margin, flight_bounds.x2 - dive_end_margin)),
+		set(_target_x, if(dash_direction = 1, flight_bounds.x + dive_end_margin, flight_bounds.x2 + dive_end_margin)),
 		set(_target_y, me.mid_y),
 	]",
 
 	choose_dive_recovery_pos: "[
 		dash_particles.turn_off,
-		set(_target_x, if(dash_direction = 1, flight_bounds.x + dive_end_margin, flight_bounds.x2 - dive_end_margin)),
+		set(_target_x, if(dash_direction = 1, flight_bounds.x + dive_end_margin, flight_bounds.x2 + dive_end_margin)),
 		set(_target_y, flight_bounds.y + (flight_bounds.y2 - flight_bounds.y)/2),
 	]",
 
