Patched a weird case where squirrel nuts had the wrong damage value.

--- a/data/objects/enemies/animals/acorn.cfg
+++ b/data/objects/enemies/animals/acorn.cfg
@@ -4,7 +4,13 @@ dies_on_inactive: true,
 prototype: ["throwable_projectile"],
 properties: {
 	is_player_ammo: "bool :: (time_spat != null)",
-	attack_damage: "if(animation in ['thrown'], if(team='evil',1,400), 0)",
+	attack_damage: "if(animation in ['thrown'],
+		if(team='evil',
+			1,
+			standard_thrown_damage
+		),
+		0
+	)",
 	
 	title: "~Acorn~",
 	description: "~Acorns are commonly found near trees. Why this is so, is unknown.~",
