Refactored secret_passage_controller to set solidity earlier.
Objects could wander in to secret passages, and then the engine would
assert on load because the object was suddenly in a solid wall.

Fixes #534, "Ant in a bad position on downhill.cfg."

--- a/data/objects/effects/solidity/secret_passage_controller.cfg
+++ b/data/objects/effects/solidity/secret_passage_controller.cfg
@@ -5,19 +5,36 @@ hidden_in_game: true,
 is_strict: true,
 zorder: "@include data/zorder.cfg:in_front_of_everything",
 
+//This is needed, because on load of level we need to set solidity _everywhere_. Otherwise
+//objects get trapped in the solid area that was a secret passage, and the engine asserts.
+//See issue #534 for an example of this. <https://github.com/frogatto/frogatto/issues/534>
+//A proper fix might be to have on_load always fire regardless of activation status.
+always_active: true,
+
 
 editor_info: {
 	category: "controllers",
 },
 
 properties: {
-	set_actA: "commands ::
-					set(activation_area, [
-						min(_x_bound,_x2_bound) -200,
-						min(_y_bound,_y2_bound) -200,
-						abs(_x_bound-_x2_bound) +200,
-						abs(_y_bound-_y2_bound) +200
-					])",
+	set_activation_area: "
+		set(activation_area, [
+			min(_x_bound,_x2_bound) -200,
+			min(_y_bound,_y2_bound) -200,
+			abs(_x_bound-_x2_bound) +200,
+			abs(_y_bound-_y2_bound) +200
+		])
+	",
+	
+	install_secret_area: "
+		if(should_exist, set_solid(_x_bound, _y_bound, _x2_bound, _y2_bound, _solid))
+		where should_exist = if(
+			level.player is obj frogatto_playable, 
+			not level.player.player_has_died_since_last_unique_checkpoint, 
+			false
+		)
+	",
+
 
 
 #-------------------------- editor settings --------------------------#
@@ -29,18 +46,13 @@ properties: {
 },
 
 
-on_start_level: "set_actA",
+on_start_level: "set_activation_area",
 
-on_load: "	[
-				fire_event('level_tiles_refreshed'),
-				set_actA
-			]",
+on_load: "[set_activation_area, install_secret_area]",
 
-on_level_tiles_refreshed: "if(should_open, set_solid(_x_bound, _y_bound, _x2_bound, _y2_bound, _solid))
-	where should_open = if(level.player is obj frogatto_playable, not level.player.player_has_died_since_last_unique_checkpoint, false)
-	",
-	
-	
+on_level_tiles_refreshed: "install_secret_area",
+
+
 on_end_anim: "animation('normal')",
 
 animation: {
