added hints to the wall on twisted-trees.cfg and cleaned up dialog code in dungeon-gateway.cfg

--- a/data/level/Dungeon/dungeon-gateway.cfg
+++ b/data/level/Dungeon/dungeon-gateway.cfg
@@ -125,8 +125,10 @@
 			"face_right": 0,
 			"label": "_4f213797",
 			"on_triggered": "if(not level.player.get_stored_event('chat_cat'), 
-							[level.player.store_event('chat_cat', 1),
-							[remove_object(self),fire_event(get_object_or_die(level,'chat_cat'), 'chat')]])",
+							[
+							    level.player.store_event('chat_cat', 1),
+							    remove_object(self),fire_event(get_object_or_die(level,'chat_cat'),'chat')
+							])",
 			"time_in_frame": 0,
 			"type": "level_controller_onetime",
 			"velocity_x": 0,
