--- a/data/level/Forest/twisted-trees.cfg
+++ b/data/level/Forest/twisted-trees.cfg
@@ -2734,8 +2734,18 @@
 			"_uuid": "f84cb25a332a4844bdb4a272a2e542ec",
 			"current_frame": "normal",
 			"custom": true,
-			"label": "_7b075fe3",
+			"label": "chat_block",
 			"type": "breakable_block_energy_blue",
+			"on_chat": "speech_dialog(level.player,
+                            if(prospera,
+                                speech_dialog([~Prospera said to go into the mines.~], [~That's where I'll find the eyeball.~]),
+                                if(imoti,
+                                    speech_dialog([~This must be the forcefield Imoti meant.~]),
+                                    speech_dialog(level.player, [~Huh...  What's this now?~]),
+                                ),
+                            )
+                        ) where imoti=level.player.get_stored_event('introduced_to_imoti'),
+                          where prospera=level.player.get_stored_event('finished_initial_prospera_conversation')",
 			"x": 3136,
 			"y": 384
 		},
@@ -2743,14 +2753,11 @@
 			"_uuid": "d62c621ed9284905b74acd161106e942",
 			"current_frame": "normal",
 			"custom": true,
-			"label": "_638e6bc2",
-			"on_triggered": "if(level.player.get_stored_event('frogatto_has_seen_tempo_village_force_field'), die(),
-				[
-					level.player.store_event('frogatto_has_seen_tempo_village_force_field',1),
-					transient_speech_dialog(level.player, [~Huh...  What's this now?~]),
-					die()
-				]
-			)",
+			"label": "wall_hints",
+			"on_triggered": "[
+                                 remove_object(self),
+                                 fire_event(get_object_or_die(level,'chat_block'), 'chat')
+                             ]",
 			"property_data": {
 				"_x2_bound": 3168,
 				"_x_bound": 2944,
