Tweak a platform which was intersecting with the ground in The 500 Feet.

--- a/data/level/Forest/the-500-feet.cfg
+++ b/data/level/Forest/the-500-feet.cfg
@@ -980,7 +980,8 @@
 			"property_data": {
 				"_move_x1": 9360,
 				"_move_y1": -656,
-				"_move_y2": -240,
+				"_move_y2": -288,
+				"actual_speed": 1.35869,
 				"is_zipline": false,
 				"rope_height": 128,
 				"stopped": 0,
@@ -3021,7 +3022,6 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_163c6f00",
-			"parent": "deserialize('ddacf09012864df293b318b0d418c05a')",
 			"property_data": {
 				"_sound_volume_scale_cache": {
 					"max": 0,
@@ -3029,8 +3029,6 @@
 				},
 				"sound_file": "ambient/torch.ogg"
 			},
-			"relative_x": 0,
-			"relative_y": 0,
 			"type": "sound_source_individual",
 			"x": -12,
 			"y": 3028
@@ -3050,7 +3048,6 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_1974d2b8",
-			"parent": "deserialize('391afdd0471c487eb7d46958537fe45d')",
 			"property_data": {
 				"_sound_volume_scale_cache": {
 					"max": 0,
@@ -3058,8 +3055,6 @@
 				},
 				"sound_file": "ambient/torch.ogg"
 			},
-			"relative_x": 0,
-			"relative_y": 0,
 			"type": "sound_source_individual",
 			"x": 8007,
 			"y": 538
@@ -3079,7 +3074,6 @@
 			"current_frame": "normal",
 			"custom": true,
 			"label": "_7ca0267c",
-			"parent": "deserialize('c64264af4da34f98a4353488a18b9187')",
 			"property_data": {
 				"_sound_volume_scale_cache": {
 					"max": 0,
@@ -3087,8 +3081,6 @@
 				},
 				"sound_file": "ambient/torch.ogg"
 			},
-			"relative_x": 0,
-			"relative_y": 0,
 			"type": "sound_source_individual",
 			"x": 8921,
 			"y": 539
