--- a/data/object_prototypes/base/player_controlled_platformer_character.cfg
+++ b/data/object_prototypes/base/player_controlled_platformer_character.cfg
@@ -166,7 +166,7 @@ on_timer: "[
 	if(not is_invincible_posthit, [
 		if(underwater and water_object,
 			if( the_liquid.liquid_damage, [
-				add(hitpoints, -the_liquid.liquid_damage),
+			    handle_damage_sourceless(enum acid, the_liquid.liquid_damage),
 				display_hurt_visuals({damage_type: the_liquid.damage_type},the_liquid.liquid_damage),
 				if(water_object.type = 'acid_controller', [		/*TODO:  port this to hittable?*/
 					sound('acid.ogg'),
