--- a/data/level/Unused/Test/test.cfg
+++ b/data/level/Unused/Test/test.cfg
@@ -6,22 +6,6 @@
 	"background_palette": "seaside_sunny",
 	"character": [
 		{
-			"_uuid": "26d03470fa2744abb609ff9eba55b14b",
-			"activation_border": 448,
-			"current_frame": "fly",
-			"custom": true,
-			"label": "_5ce63697",
-			"property_data": {
-				"_desired_height": -720,
-				"_x2_bound": 2701,
-				"_x_bound": 2253,
-				"original_level_we_spawned_on": "test.cfg"
-			},
-			"type": "moth_black",
-			"x": 2443,
-			"y": -768
-		},
-		{
 			"_uuid": "d6c5f74a141647028672f1503f28b494",
 			"current_frame": "stand",
 			"custom": true,
@@ -35,8 +19,8 @@
 				"original_level_we_spawned_on": "test.cfg"
 			},
 			"type": "frogatto_playable",
-			"x": 2816,
-			"y": -862
+			"x": 2592,
+			"y": -1600
 		},
 		{
 			"_uuid": "33d4e962353c4dffadf1b91069297859",
@@ -55,81 +39,26 @@
 			"y": -544
 		},
 		{
-			"_uuid": "8ee97fa78d2d4f14afe84507da21a877",
-			"activation_border": 448,
-			"current_frame": "fly",
-			"custom": true,
-			"face_right": false,
-			"label": "_12d11884",
-			"property_data": {
-				"_desired_height": -1040,
-				"_x2_bound": 4464,
-				"_x_bound": 4016,
-				"original_level_we_spawned_on": "test.cfg"
-			},
-			"type": "gazer_grey",
-			"x": 4199,
-			"y": -1081
-		},
-		{
-			"_uuid": "c0d70058af2d4c1ebec55af262bd0051",
-			"created": true,
+			"_uuid": "a0fdb94e1ab34fa9b5998295293422da",
 			"current_frame": "normal",
 			"custom": true,
-			"label": "_51ff3313",
-			"parent": "deserialize('820bc201f9654562aefb572046eeee36')",
-			"property_data": {
-				"_sound_volume_scale_cache": {
-					"max": 0,
-					"min": 0
-				},
-				"sound_file": "ambient/space-glow.wav"
-			},
-			"relative_x": 0,
-			"relative_y": 0,
-			"type": "sound_source_individual",
-			"x": 4212,
-			"y": -1068
+			"label": "_6c8aac95",
+			"type": "seaside_house_2",
+			"x": 2976,
+			"y": -1568
 		},
 		{
-			"_uuid": "ee914a8a0e4045e78bd29ff86b250c06",
-			"activation_border": 448,
-			"current_frame": "fly",
-			"custom": true,
-			"face_right": false,
-			"label": "_581c6586",
-			"property_data": {
-				"_desired_height": -976,
-				"_x2_bound": 4368,
-				"_x_bound": 3920,
-				"original_level_we_spawned_on": "test.cfg"
-			},
-			"type": "gazer_grey",
-			"x": 4103,
-			"y": -1017
-		},
-		{
-			"_uuid": "55b5c1780d204c7eaf6ab86fc788d190",
-			"created": true,
+			"_uuid": "1e001d81405d47af9543eccbcc5bd173",
 			"current_frame": "normal",
 			"custom": true,
-			"label": "_4095a72c",
-			"parent": "deserialize('2decf3d07b7b462a980335758d5932a1')",
-			"property_data": {
-				"_sound_volume_scale_cache": {
-					"max": 0,
-					"min": 0
-				},
-				"sound_file": "ambient/space-glow.wav"
-			},
-			"relative_x": 0,
-			"relative_y": 0,
-			"type": "sound_source_individual",
-			"x": 4116,
-			"y": -1004
+			"face_right": false,
+			"label": "_9e1b419",
+			"type": "seaside_house_2",
+			"x": 2432,
+			"y": -1568
 		}
 	],
-	"dimensions": [-768,-1376,4415,575],
+	"dimensions": [-768,-1728,4415,575],
 	"id": "test.cfg",
 	"music": "",
 	"palettes": ["seaside_sunny"],
@@ -142,91 +71,14 @@
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
 		{
-			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": ",nbr",
+			"tiles": "",
+			"unique_tiles": "",
 			"variations": "",
-			"x": -800,
-			"x_speed": 100,
-			"y": -1408,
+			"x": 0,
+			"x_speed": 105,
+			"y": 0,
 			"y_speed": 100,
-			"zorder": "exterior_background_tiles"
+			"zorder": "background_parallax_walls"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
@@ -234,9 +86,9 @@
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,,,,,,,,,,,,,,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,,,,,,,,,,,,,,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,,,,,,,,,,,,,,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,,,,,,,,,,,,,,cbk,cbk,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,,,,,,,,,,,,,,,,,,,,,,,,,cbk,cbk,cbk,cbk,cbk
@@ -302,7 +154,59 @@
 			"zorder": "interior_solid_ground_tiles"
 		},
 		{
-			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,bdg,bdg,bdg
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,",
+			"unique_tiles": ",bdg",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": -1376,
+			"y_speed": 100,
+			"zorder": "interior_shelves_and_stairs"
+		},
+		{
+			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr,,,,,,,,,,,,,,,,,,,fbr,fbr,fbr,fbr,fbr
 ,
 ,
 ,
@@ -331,6 +235,16 @@
 			"y": -704,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
 		}
 	],
 	"title": "",
