Adapted the seaside house 1 so that it can correctly place its overlay graphic when flipped.  Adjusted mortimer's house to be flipped.

--- a/data/level/Seaside/secluded-hut.cfg
+++ b/data/level/Seaside/secluded-hut.cfg
@@ -66,26 +66,28 @@
 			"_uuid": "d896013c968a4223b79e9a722c161597",
 			"current_frame": "normal",
 			"custom": true,
+			"face_right": false,
 			"label": "right_door",
 			"property_data": {
 				"_dest_door": "right-door",
 				"_dest_level": "secluded-hut-interior.cfg"
 			},
-			"type": "seaside_house_exterior_door_house_1",
-			"x": 1096,
-			"y": -772
+			"type": "seaside_house_exterior_door_cliff_house_1",
+			"x": 1024,
+			"y": -775
 		},
 		{
 			"_uuid": "fcb72c623a57428abe7f47ddfc638f9e",
 			"current_frame": "normal",
 			"custom": true,
+			"face_right": false,
 			"label": "left_door",
 			"property_data": {
 				"_dest_door": "left_door",
 				"_dest_level": "secluded-hut-interior.cfg"
 			},
-			"type": "seaside_house_exterior_door_cliff_house_1",
-			"x": 798,
+			"type": "seaside_house_exterior_door_house_1",
+			"x": 732,
 			"y": -773
 		},
 		{
@@ -193,8 +195,8 @@
 			"custom": true,
 			"label": "_2f3cb7c7",
 			"type": "smoke_generator",
-			"x": 1064,
-			"y": -1123
+			"x": 852,
+			"y": -1118
 		},
 		{
 			"_uuid": "add40532954a45fcb27f1aff631eb75f",
@@ -760,8 +762,8 @@
 			"custom": true,
 			"label": "_4106f7e8",
 			"type": "rock_foreground_seaside2",
-			"x": 580,
-			"y": -754
+			"x": 588,
+			"y": -741
 		},
 		{
 			"_uuid": "cebf4c66298c4f4893ea00769758b68a",
@@ -769,8 +771,8 @@
 			"custom": true,
 			"label": "_36cdb168",
 			"type": "rock_foreground_seaside1",
-			"x": 683,
-			"y": -732
+			"x": 723,
+			"y": -701
 		},
 		{
 			"_uuid": "bf5b57f85a364e2d81d983e44f3cfcfc",
@@ -1155,13 +1157,13 @@ you do want to buy a copy.~],
 			"custom": true,
 			"label": "_8b7103d",
 			"property_data": {
-				"_x2_bound": 1014,
-				"_x_bound": 914,
+				"_x2_bound": 1043,
+				"_x_bound": 943,
 				"_y2_bound": -560,
 				"_y_bound": -860
 			},
 			"type": "save_statue",
-			"x": 934,
+			"x": 963,
 			"y": -690
 		},
 		{
@@ -1183,19 +1185,21 @@ you do want to buy a copy.~],
 			"_uuid": "10413076e7cd49c4bbc1e1cec8328dd0",
 			"current_frame": "normal",
 			"custom": true,
+			"face_right": false,
 			"label": "_5d583477",
 			"type": "seaside_house_1",
-			"x": 585,
-			"y": -1243
+			"x": 621,
+			"y": -1242
 		},
 		{
 			"_uuid": "db468d6e35324a21a1ac12dc59dfd486",
 			"current_frame": "normal",
 			"custom": true,
+			"face_right": false,
 			"label": "_4bd52ed8",
 			"type": "forest_decor_hanging_plant",
-			"x": 813,
-			"y": -865
+			"x": 966,
+			"y": -863
 		},
 		{
 			"_uuid": "61119e59f1b346e4b980863df5d260d5",
@@ -1206,6 +1210,61 @@ you do want to buy a copy.~],
 			"type": "forest_decor_jars",
 			"x": 1255,
 			"y": -747
+		},
+		{
+			"_uuid": "e0ad0adfe4d64e2a904fb9e8ec9cc984",
+			"current_frame": "normal",
+			"custom": true,
+			"face_right": false,
+			"label": "_629a4dfc",
+			"type": "fern_foreground3",
+			"x": 1088,
+			"y": -806
+		},
+		{
+			"_uuid": "39a819d4364b41d3a1fc1319568a4353",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_6b26997a",
+			"type": "ground_extension_seaside_bg6",
+			"x": 847,
+			"y": -691
+		},
+		{
+			"_uuid": "328bcaf53af74ec1985db75c11733b8c",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_18aaa0bd",
+			"type": "ground_extension_seaside_bg6",
+			"x": 733,
+			"y": -686
+		},
+		{
+			"_uuid": "3528ba6e24b24cd692774fa35048cc9b",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_445863f3",
+			"type": "ground_extension_seaside_bg6",
+			"x": 642,
+			"y": -680
+		},
+		{
+			"_uuid": "3808d528eb504fe5814b321083d58687",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_3a83ca2e",
+			"type": "ground_extension_seaside2",
+			"x": 576,
+			"y": -667
+		},
+		{
+			"_uuid": "bb47eaad5c9843128a5e40ebee639d1e",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_c78028f",
+			"type": "ground_extension_seaside1",
+			"x": 659,
+			"y": -661
 		}
 	],
 	"dimensions": [-672,-1376,2175,962],
@@ -1222,6 +1281,16 @@ you do want to buy a copy.~],
 	},
 	"set_screen_resolution_on_entry": false,
 	"tile_map": [
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "background_parallax_objects"
+		},
 		{
 			"tiles": ",
 ,,,,,,,,,,,,,,,,,,,,,,nbr
@@ -1371,6 +1440,36 @@ you do want to buy a copy.~],
 			"zorder": "wooden_scaffolding_background_behind_trees"
 		},
 		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "liquid_particle_effects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_near_background"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_solid_ground_tiles_underlays"
+		},
+		{
 			"tiles": ",
 ,
 ,
@@ -1396,7 +1495,7 @@ you do want to buy a copy.~],
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,,,nrk,nrk,nrk,nrk
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,,,,,,,,,,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk
@@ -1457,6 +1556,16 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 			"y": -1472,
 			"y_speed": 100,
 			"zorder": "exterior_solid_ground_tiles"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_solid_ground_tiles_overlays"
 		},
 		{
 			"tiles": ",,fbr,fbr,fbr,fbr,fbr
@@ -1530,6 +1639,76 @@ nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,nrk,
 			"zorder": "player"
 		},
 		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "wooden_platform_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "exterior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "interior_decor"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "npcs"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "player"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "near_player_foreground_effects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": 15
+		},
+		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,ngs,ngs
 ,
 ,
@@ -1590,6 +1769,36 @@ ngs,ngs,,,,,,,,,,ngs,ngs,ngs,,,,,,,,ngs,ngs,ngs,ngs
 			"y": -896,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "water_surface"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "foreground_parallax_objects"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "Secluded Hut",
