--- a/data/objects/props/buildings/seaside/seaside_house_1.cfg
+++ b/data/objects/props/buildings/seaside/seaside_house_1.cfg
@@ -6,11 +6,17 @@ prototype: ["cosmetic_effects"],
 properties: {
 	material_sound: "enum wood_solid",
 },
-on_create: "spawn('seaside_house_1.overlay',x+198*facing,y+482,facing)",
+on_create: "spawn('seaside_house_1.overlay',
+	//x+198*facing,
+	mid_x + (18 - 42) * facing,
+	y+482,
+	facing
+)",
 editor_info: {
 	category: "buildings, seaside",
 },
 animation: {
+	no_remove_alpha_borders: true,
 	id: "normal",
 	image: "props/buildings/seaside-house-1.png",
 	rect: [0,0,359,359],
@@ -27,6 +33,7 @@ object_type: {
 	zorder: "@include data/zorder.cfg:wooden_scaffolding_foreground",
 	zsub_order: 2,
 	animation: {
+		no_remove_alpha_borders: true,
 		id: "normal",
 		image: "props/buildings/seaside-house-1_overlay.png",
 		rect: [0,0,159,159],
