Added the always_active hack to all solidity-adjacent controllers.

--- a/data/objects/effects/solidity/heightmap_platform_controller.cfg
+++ b/data/objects/effects/solidity/heightmap_platform_controller.cfg
@@ -7,6 +7,12 @@ hidden_in_game: true,
 platform_area: [0,0,10],
 prototype: ["cosmetic_effects"],
 
+//This is needed, because on load of level we need to set solidity _everywhere_. Otherwise
+//objects get trapped in the solid area that was a secret passage, and the engine asserts.
+//See issue #534 for an example of this. <https://github.com/frogatto/frogatto/issues/534>
+//A proper fix might be to have on_load always fire regardless of activation status.
+always_active: true,
+
 
 properties: {
 	material_sound: "self.footfall_sound_effect",
