--- a/data/objects/effects/solidity/nonsecret_passage_controller.cfg
+++ b/data/objects/effects/solidity/nonsecret_passage_controller.cfg
@@ -1,11 +1,18 @@
 {
+/*  This is exactly like the secret passage controller object, but lacks the functionality to hide itself when the player dies. */
+
 id: "nonsecret_passage_controller",
 ignore_collide: true,
 hidden_in_game: true,
 is_strict: true,
 zorder: "@include data/zorder.cfg:in_front_of_everything",
 
-/*  This is exactly like the secret passage controller object, but lacks the functionality to hide itself when the player dies. */
+//This is needed, because on load of level we need to set solidity _everywhere_. Otherwise
+//objects get trapped in the solid area that was a secret passage, and the engine asserts.
+//See issue #534 for an example of this. <https://github.com/frogatto/frogatto/issues/534>
+//A proper fix might be to have on_load always fire regardless of activation status.
+always_active: true,
+
 
 
 editor_info: {
