--- a/data/objects/effects/solidity/solid_area_controller.cfg
+++ b/data/objects/effects/solidity/solid_area_controller.cfg
@@ -4,6 +4,12 @@ ignore_collide: true,
 hidden_in_game: true,
 is_strict: true,
 
+//This is needed, because on load of level we need to set solidity _everywhere_. Otherwise
+//objects get trapped in the solid area that was a secret passage, and the engine asserts.
+//See issue #534 for an example of this. <https://github.com/frogatto/frogatto/issues/534>
+//A proper fix might be to have on_load always fire regardless of activation status.
+always_active: true,
+
 on_start_level: "set(activation_area, [min(_x_bound,_x2_bound) -200, min(_y_bound,_y2_bound) -200, abs(_x_bound-_x2_bound) +200, abs(_y_bound-_y2_bound) +200])",
 on_load: "[fire_event('level_tiles_refreshed'),set(activation_area, [min(_x_bound,_x2_bound) -200, min(_y_bound,_y2_bound) -200, abs(_x_bound-_x2_bound) +200, abs(_y_bound-_y2_bound) +200])]",
 on_level_tiles_refreshed: "set_solid(_x_bound, _y_bound, _x2_bound, _y2_bound, _solid)",
