Fixed the bug where if you have a swallowed object with zero hitpoints, it'll still be considered in your stomach when loading from a save.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -40,21 +40,14 @@ properties: {
 		remap_my_attaches_to_me ;
 		
 		/*
-			We're trying to fix an issue here where the position_predictor is
-			basically referring to a 'stale/zombie' version of the player
-			character, after loading from a save.  If you just launch a level,
-			then the predictor will work just fine, but if you respawn from a
-			checkpoint, it'll refer to the prior version of the player, which
-			gives incorrect coordinates.   This because the on_create behavior
-			for the player triggers the `init` statements inside of variables,
-			but the `on_load` et al fail to actually run any of those
-			variables, wrongly assuming that if they've already been built,
-			that whatever's in them will happily stay correct across launches.
+			We're trying to fix an issue here where the position_predictor is basically referring to a 'stale/zombie' version of the player character, after loading from a save.  If you just launch a level, then the predictor will work just fine, but if you respawn from a checkpoint, it'll refer to the prior version of the player, which gives incorrect coordinates.   This because the on_create behavior for the player triggers the `init` statements inside of variables, but the `on_load` et al fail to actually run any of those variables, wrongly assuming that if they've already been built, that whatever's in them will happily stay correct across launches.
 		*/
 		set(
 			position_predictor,
 			construct('predictive_player_motion',{this_obj: me, the_player: me}),
 		),
+
+
 		readd_attaches(me),
 		if(not item_quantities, initialize_items),
 
@@ -65,6 +58,7 @@ properties: {
 			if(MODULE_OPTIONS.lucre, lucre),
 		]),
 
+		reestablish_swallowed_object,
 	]",
 
 	specific_player_obj_constructor: "commands :: [
@@ -77,18 +71,33 @@ properties: {
 		if(not _preexisting_object, [  //note to self: this doesn't get serialized, so you can't do this in the player object.
 		]),
 
-			/* Make it so that if we had a swallowed object we create a fresh version of the object in our stomach. */
-		if(swallowed_object, [
-				set(swallowed_object, throwable_obj),
-				fire_event(throwable_obj, 'been_grabbed'),
-				fire_event(throwable_obj, 'swallowed')
-			] where throwable_obj = (obj throwable <- replacement_object_with_preserved_attributes( swallowed_object, swallowed_object.type, swallowed_object.hitpoints, swallowed_object.max_hitpoints ))
-		),
+		
+		reestablish_swallowed_object,
 		
 
 		validate_death_tracking_storage,
 	]",
 
+	reestablish_swallowed_object: "commands :: [
+		/*
+			Make it so that if we had a swallowed object we create a fresh version of the object in our stomach.
+		
+			There's a rare bug that can happen sometimes where, before saving, where the player's swallowed object ends up being a valid object, but having a hitpoint value of zero.  If that's the case here, we deal with it by just making the swallowed object null.
+		*/
+		if(swallowed_object,
+			if(swallowed_object.hitpoints = 0,
+				[
+					empty_stomach({kill_contents: false}),
+					animation('stand'),
+				],
+				[
+					set(swallowed_object, throwable_obj),
+					fire_event(throwable_obj, 'been_grabbed'),
+					fire_event(throwable_obj, 'swallowed')
+				] where throwable_obj = (obj throwable <- replacement_object_with_preserved_attributes( swallowed_object, swallowed_object.type, swallowed_object.hitpoints, swallowed_object.max_hitpoints ))
+			)
+		),
+	]",
 
 
 	
