Fixed a scary bug where type checking wasn't catching an enum usage.

--- a/data/objects/playable/frogatto_playable.cfg
+++ b/data/objects/playable/frogatto_playable.cfg
@@ -4404,7 +4404,7 @@ object_type: [
 			_parent_obj: {type: "custom_obj", dynamic_initialization: true},
 			death_effects: "def(string type) -> commands spawn('frogatto_playable.fire_shot_puff', mid_x + 10*sign(velocity_x), mid_y, facing)",
 			
-			status_effects_this_attack_inflicts: "[enum explosion]",
+			status_effects_this_attack_inflicts: "[enum exploding]",
 			
 			do_stuff: "map( filter(level.active_chars, value is obj hittable_enemy), status_effect_add(enum exploding, value) )",
 		},
