--- a/data/objects/props-interactive/portals/seaside_house_bookshelf_secret_passage.cfg
+++ b/data/objects/props-interactive/portals/seaside_house_bookshelf_secret_passage.cfg
@@ -11,6 +11,7 @@ on_end_ajar_anim: "animation('ajar')",
 on_open: "[play_sound__falloff('DoorOpen.ogg'),animation('open')]",
 platform_area: [10,22,48,23],
 prototype: ["cosmetic_effects"],
+
 editor_info: {
 	category: "buildings, portals",
 	var: [
@@ -30,15 +31,18 @@ properties: {
 },
 animation: [
 	{
+		"@base": true,
+		palettes: "@include data/palettes.cfg:interior_palettes",
 		image: "props/bookshelf-secret-passage.png",
+	},
+	{
 		pad: 0,
 		id: "normal",
-	rect: [1,0,62,83],
+		rect: [1,0,62,83],
 		frames: 1,
 		duration: 10000000,
 	},
 	{
-		image: "props/bookshelf-secret-passage.png",
 		pad: 1,
 		id: "open",
 		rect: [1,0,62,83],
@@ -49,7 +53,6 @@ animation: [
 
 	#events="14:enter"
 	{
-		image: "props/bookshelf-secret-passage.png",
 		pad: 1,
 		id: "close",
 		rect: [1,0,62,83],
@@ -61,10 +64,9 @@ animation: [
 
 	#events="14:enter"
 	{
-		image: "props/bookshelf-secret-passage.png",
 		pad: 0,
 		id: "ajar",
-	rect: [190,170,251,253],
+		rect: [190,170,251,253],
 		frames: 1,
 		duration: 10000000,
 	},
