Finished removing the few remaining fumpers from the seaside levels.

--- a/data/level/Seaside/rock-a-fort.cfg
+++ b/data/level/Seaside/rock-a-fort.cfg
@@ -208,15 +208,6 @@
 			"y": -480
 		},
 		{
-			"_uuid": "005c3491786848f3b6f16cb6050bffc7",
-			"current_frame": "normal",
-			"custom": true,
-			"label": "_327ddfce",
-			"type": "fumper_hopper",
-			"x": 2848,
-			"y": -442
-		},
-		{
 			"_uuid": "a6487d56a7124477b98530f65187e023",
 			"current_frame": "normal",
 			"custom": true,
@@ -2808,6 +2799,18 @@
 			"type": "brambles-wall_7",
 			"x": 4029,
 			"y": -632
+		},
+		{
+			"_uuid": "f28e98d523394c119c69c868ac21c989",
+			"current_frame": "normal",
+			"custom": true,
+			"label": "_709cd681",
+			"property_data": {
+				"original_level_we_spawned_on": "rock-a-fort.cfg"
+			},
+			"type": "pricklestalk_green",
+			"x": 2764,
+			"y": -451
 		}
 	],
 	"dimensions": [-704,-896,7586,1440],
